# testing_actions

./: CMakeLists.txt  Makefile  app.cpp
.github/workflows/: cmake-single-platform.yml
